--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"bot_token": "7494739390:AAEhCiSboMVW0JJi1jI0-xxjllF3TzlPKlk", "admin_ids": ["5464427719"], "user_file": "@Felixbbyy", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
+{"bot_token": "7494739390:AAEhCiSboMVW0JJi1jI0-xxjllF3TzlPKlk", "admin_ids": ["5464427719"], "user_file": "@Felixbbyy", "log_file": "5464427719", "cooldown_time": 300, "admin_balances": {"5464427719": 8769900}}
